fixed spacing with expenditures on map view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1711,10 +1711,6 @@ sidebar {
   padding: 0;
   box-sizing: border-box;
   z-index: 2; }
-  #mapNav h2 {
-    text-align: center;
-    font-size: 20px;
-    line-height: 40px; }
   #mapNav ul {
     position: absolute;
     box-sizing: border-box;
